# open-recognition

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: openapi.json
docs/img/faces/: CREDITS.md
scripts/: cv_bench.py  demo_real_faces.py  dump_openapi.py  make_readme_figures.py  stress_test.py
src/application/: compare_faces.py  create_collection.py  delete_collection.py  delete_faces.py  describe_collection.py  detect_faces.py  index_faces.py  list_collections.py  list_faces.py  ports.py  search_faces_by_image.py
src/domain/: collection.py  embedding.py  errors.py  face.py  face_attributes.py  face_record.py  landmarks.py  quality.py  similarity.py
src/infrastructure/cv/: composite_analyzer.py  facemesh_recognizer.py  fer_recognizer.py  image_decoder.py  model_loader.py  pose.py  quality.py  sface_recognizer.py  yunet_detector.py
src/infrastructure/persistence/: collection_repo.py  db.py  face_repo.py
src/interface/http/: app.py  attributes.py  (+4 more)
tests/e2e/: test_boto3.py
tests/integration/: conftest.py  test_http_test_client.py  test_repos.py
tests/unit/: conftest.py  test_attributes.py  test_collection.py  test_compare_faces.py  test_composite_analyzer.py  test_detect_faces_usecase.py  test_embedding.py  test_face.py  test_face_attributes.py  test_facemesh_recognizer.py  test_fer_recognizer.py  test_image_quality.py  test_landmarks.py  test_model_loader.py  test_pose.py  test_quality.py  test_schemas_facedetail.py  test_similarity.py
(+22 files in other folders)
