[project]
name = "open-recognition"
version = "0.1.0"
description = "Self-hosted, boto3-compatible AWS Rekognition Faces API (YuNet + SFace + pgvector)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "opencv-contrib-python>=4.10.0.84",
    "numpy>=2.0",
    "pillow>=11.0",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "alembic>=1.14",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.12",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "boto3>=1.35",
    "ruff>=0.7",
    "mypy>=1.13",
    "testcontainers[postgres]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/application", "src/domain", "src/infrastructure", "src/interface"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's File()/Form() in argument defaults is the idiomatic pattern.
"src/interface/http/ui.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
